creat edit/delete user

--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
           <img src="img/exit-modal.svg" id="exit-modal" alt="exit-modal">
         </header>
         <div id="render-user-fialds"></div>
-        <div class="list-users__creat-user__button">
+        <div id="list-users__creat-user__button" class="list-users__creat-user__button">
             <button id="close-button">Create</button>
-          </div>
+        </div>
+        <div id="list-users__edit-user__button" class="list-users__edit-user__button d-none">
+          <button id="delete-user">Delete</button>
+          <button id="save-user">Save</button>
+        </div>
       </div>
     </div>
     <div class="d-none" id="successMessageAnswer">Success message</div>
